# apps/backend/internal/service/common_model.go
@@ -2,15 +2,12 @@ package service
 
 import (
 	"time"
-
-	"gorm.io/gorm"
 )
 
 type (
 	CommonModel struct {
-		ID        uint           `gorm:"primarykey" json:"id"`
-		CreatedAt time.Time      `json:"created_at"`
-		UpdatedAt time.Time      `json:"updated_at"`
-		DeletedAt gorm.DeletedAt `gorm:"index"`
+		ID        uint      `gorm:"primarykey" json:"id"`
+		CreatedAt time.Time `json:"created_at"`
+		UpdatedAt time.Time `json:"updated_at"`
 	}
 )
